--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,10 +17,12 @@
 <body>
 
     <!----------seccion1 header-------->
-    <div class="header">
-        <div class="logo-header">
-            <img src="../img/logo.svg" alt="logo-header" />
-            </nav>
+    <section class="header">
+
+        <h1>hola</h1>
+        <div id="menu-desktop">
+            <img src="./img/logo.svg" alt="logo-header" />
+
 
             <ul class="menu-desktop">
                 <li>
@@ -37,32 +39,17 @@
                 </li>
             </ul>
 
-            </nav>
+
 
         </div>
-        </nav>
-        <div class="menu-mobile ">
-            <i class="fas fa-bars"></i>
-            <input type="checkbox " class="navigation-checkbox " />
-            <nav>
-                <ul class="menu-mobile">
-                    <li>
-                        <a href="#">EPISODIOS</a>
-                    </li>
-                    <li>
-                        <a href="#">NOSOTROS</a>
-                    </li>
-                    <li>
-                        <a href="#">PODCAST</a>
-                    </li>
-                    <li>
-                        <a href="#">TÓPICOS</a>
-                    </li>
-                </ul>
 
-            </nav>
+        <div id="menu-mobile ">
+            <img src="./img/logo.svg" alt="logo-header" />
+            <div style="height:50px; width: 50px; background-color: red;"></div>
+
+
         </div>
-    </div>
+    </section>
 
     <!----------------seccion2 podcast y fondo azul----------->
     <div class="seccion2 ">
