--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,12 +18,8 @@
 
     <!----------seccion1 header-------->
     <section class="header">
-
-        <h1>hola</h1>
         <div id="menu-desktop">
             <img src="./img/logo.svg" alt="logo-header" />
-
-
             <ul class="menu-desktop">
                 <li>
                     <a href="#">EPISODIOS</a>
@@ -38,20 +34,15 @@
                     <a href="#">TÓPICOS</a>
                 </li>
             </ul>
-
-
-
         </div>
 
-        <div id="menu-mobile ">
+        <div id="menu-mobile">
             <img src="./img/logo.svg" alt="logo-header" />
             <div style="height:50px; width: 50px; background-color: red;"></div>
-
-
         </div>
     </section>
 
-    <!----------------seccion2 podcast y fondo azul----------->
+    <!----------------seccion2 podcast y fondo azul---------
     <div class="seccion2 ">
         <div id="txt-2">
             <div class="txt-2h1">
@@ -81,6 +72,7 @@
                 <img src="../img/embed4.png " alt="embed4 " />
             </div>
         </div>
+        -->
 
 
         <!----------seccion3 mobile y fotos mujeres--------
