--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+    <h1>hola</h1>
     <!----------seccion1 header-------->
     <section class="header">
         <div id="menu-desktop">
@@ -42,22 +42,21 @@
         </div>
     </section>
 
-    <!----------------seccion2 podcast y fondo azul---------
-    <div class="seccion2 ">
+    <!----------------seccion2 podcast y fondo azul--------->
+    <section class="seccion2 ">
         <div id="txt-2">
-            <div class="txt-2h1">
-                <h1>Hello</h1>
-                <h1> world</h1>
-                <h1>pale blue dot</h1>
-                <h1>.</h1>
-            </div>
-            <p class="desktop-text">El portal de podcast que explora el mundo <br> de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días</p>
-            <p class="mobile-text">Un podcast que explora el mundo de<br> la programación. Nuevos episodios, <br>todos los jueves cada 15 días</p>
+
+            <h1>Hello <span> world</span> pale blue dot .</h1>
+
+            <p class="desktop-text">El portal de podcast que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días</p>
+            <p class="mobile-text">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días</p>
         </div>
-        <div class="button">
-            <span class="txt-1">CONOCÉ MÁS</span>
-        </div>
-        <div class="poligono">
+        <div class="button">CONOCÉ MÁS</div>
+
+
+    </section>
+
+    <!-- <div class="poligono">
             <h1 class="episodios">Episodios</h1>
             <div class="img-mobile-podcast ">
                 <img src="../img/embed1_.png " alt="img_podcast1 ">
@@ -72,10 +71,9 @@
                 <img src="../img/embed4.png " alt="embed4 " />
             </div>
         </div>
-        -->
+     -->
 
-
-        <!----------seccion3 mobile y fotos mujeres--------
+    <!----------seccion3 mobile y fotos mujeres--------
 
 
        <!-- <img class="img-mobile" src=" ../img/phone.png " alt="imgcelular ">
