--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>hola</h1>
+    <h1>hola.</h1>
     <!----------seccion1 header-------->
     <section class="header">
         <div id="menu-desktop">
