--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>hola.</h1>
+
     <!----------seccion1 header-------->
     <section class="header">
         <div id="menu-desktop">
@@ -42,7 +42,7 @@
         </div>
     </section>
 
-    <!----------------seccion2 podcast y fondo azul--------->
+    <!----------------seccion2 textos y button--------->
     <section class="seccion2 ">
         <div id="txt-2">
 
@@ -56,79 +56,82 @@
 
     </section>
 
-    <!-- <div class="poligono">
-            <h1 class="episodios">Episodios</h1>
-            <div class="img-mobile-podcast ">
-                <img src="../img/embed1_.png " alt="img_podcast1 ">
-                <img src="../img/embed2_.png " alt="img_podcast2 ">
-                <img src="../img/embed3_.png " alt="img_podcast3 ">
-                <img src="../img/embed4_.png " alt="img_podcast4 ">
+    <!----------------seccion3 (poligono e imagenes)--------->
+
+    <section class="poligono">
+        <h1 class="episodios">Episodios</h1>
+        <div class="podcast">
+            <div class="podcast1">
+                <iframe src="https://open.spotify.com/embed-podcast/episode/0mcOv3vppDks32P2owV46v" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/34qD2ZU6YLXLMxSVV0g0fa" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
-            <div class="img-desktop-podcast ">
-                <img src="../img/embed1.png " alt="embed1 " />
-                <img src="../img/embed2.png " alt="embed2 " />
-                <img src="../img/embed3.png " alt="embed3 " />
-                <img src="../img/embed4.png " alt="embed4 " />
+            <div class="podcast2">
+                <iframe src="https://open.spotify.com/embed-podcast/episode/63Oqae68J8CvyWN3c0Prhp" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/7zvKTpxX3A1ixV9rhIMv24" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
-     -->
-
-    <!----------seccion3 mobile y fotos mujeres--------
+    </section>
 
 
-       <!-- <img class="img-mobile" src=" ../img/phone.png " alt="imgcelular ">
-        <h1 class="seccion3-1">De dónde
+
+    <!----------------seccion4 mobile y parrafos---------------->
+
+    <section class="seccion4">
+        <img class="img-mobile" src="./img/phone.png " alt="imgcelular ">
+        <h1 class="txt1-4">De dónde
             <br>venimos</h1>
 
-        <p class="seccion3-2">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.
+        <p class="txt2-4">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.
             <br>
             <br> Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save uf from ourselves. </p>
-
-        <h1 class="seccion3-3">Invitadas/os
+    </section>
+    <!----------------seccion5 mujeres---------------->
+    <section class="seccion5">
+        <h1 class="txt1-5">Invitadas/os
             <br>estelares</h1>
-        <div class="img-seccion3 ">
-            <img src="../img/grace-hopper.png " alt="Grace-Hoper ">
-            <img src="../img/Katie-Bouman.png " alt="Katie-bouman ">
-            <img src="../img/Margaret_Hamilton.png " alt="Margaret-Hamilton ">
-            <img src="../img/An E.R.A.Univac 1103 computer in the 1950s.png " alt="An-ERA ">
-            <img src="../img/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png " alt="Computer-operator ">
-            <img src="../img/susan-kare.png " alt="Susan-Kare ">
+        <div class="img-seccion5 ">
+            <div class="img1"> <img src="./img/grace-hopper.png " alt="Grace-Hoper "></div>
+            <div class="img2"> <img src="./img/Katie-Bouman.png " alt="Katie-bouman "></div>
+            <div class="img3"> <img src="./img/Margaret_Hamilton.png " alt="Margaret-Hamilton "></div>
+            <div class="img4"> <img src="./img/An E.R.A.Univac 1103 computer in the 1950s.png " alt="An-ERA "></div>
+            <div class="img5"> <img src="./img/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png " alt="Computer-operator "></div>
+            <div class="img6"> <img src="./img/susan-kare.png " alt="Susan-Kare "></div>
         </div>
-    </div>
+    </section>
 
-    <!--------------------- seccion 4iconos svg----------------------
-    <section class="seccion4">
-        <h1 class="seccion4 "> Algunos de <br>nuestros temas</h1>
-        <div class="img-seccion4">
-            <div class="trabajo-remoto ">
+    <!--------------------- seccion 6 iconos svg---------------------->
+    <section class="seccion6">
+        <h1 class="seccion6"> Algunos de <br>nuestros temas</h1>
+        <div class="img-seccion6">
+            <div class="bloque-svg">
                 <img src="../img/icon1.svg " alt="Trabajo-remoto ">
                 <h2>Trabajo remoto</h2>
             </div>
-            <div class="repensendo-programacion ">
+            <div class="bloque-svg">
                 <img src="../img/icon2.svg " alt="Repensando-programacion ">
                 <h2>Repensando la programación</h2>
             </div>
-            <div class="bases-codigo ">
+            <div class="bloque-svg">
                 <img src="../img/icon3.svg " alt="Bases-codigo ">
                 <h2>Bases del código</h2>
             </div>
-            <div class="seguridad-informatica ">
+            <div class="bloque-svg">
                 <img src="../img/icon4.svg " alt="Seguridad-informatica ">
                 <h2>Seguridad informática</h2>
             </div>
         </div>
     </section>
-    <!--------------------- seccion 5 footer----------------------
+    <!------------------- seccion 7 footer---------------------->
 
 
-    <div class="poligono2">
-        <h1 class="seccion5">¿Querés las últimas novedades?</h1>
+    <section class="poligono2">
+        <h1 class="seccion7">¿Querés las últimas novedades?</h1>
         <div class="button">
-            <span class="txt-2">ESCUCHÁ LOS EPISODIOS</span>
+            ESCUCHÁ LOS EPISODIOS
         </div>
-    </div>
-
-    <div class="footer">
+    </section>
+    <!-----------------------footer------------------------------>
+    <section class="footer">
         <p class="footer-txt">2019 - Hello blue pale dot</p>
         <ul>
             <li>
@@ -156,10 +159,10 @@
                     <i class="fab fa-telegram"></i>
                 </a>
             </li>
-    </div>
-    </div>
 
--->
+    </section>
+
+
 
 
 </body>
