cambios con dudas al 23/01

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 					</a>
                 </li>
                 <li class="text-link">
-                    <a href="#img-celular">
+                    <a href="#seccion4">
 						NOSOTROS
 					</a>
                 </li>
                 <li class="text-link">
-                    <a href="#invitadas">
+                    <a href="#seccion5">
 						ENTREVISTAS
 					</a>
                 </li>
                 <li class="text-link">
-                    <a href="#iconos">
+                    <a href="#seccion6">
 						TÓPICOS
 					</a>
                 </li>
@@ -63,25 +63,26 @@
                     <ul>
                         <li class="text-link">
                             <a href="#episodios">
-									EPISODIOS
-								</a>
+                                EPISODIOS
+                            </a>
                         </li>
                         <li class="text-link">
-                            <a href="#img-celular">
-									NOSOTROS
-								</a>
+                            <a href="#seccion4">
+                                NOSOTROS
+                            </a>
                         </li>
                         <li class="text-link">
-                            <a href="#invitadas">
-									ENTREVISTAS
-								</a>
+                            <a href="#seccion5">
+                                ENTREVISTAS
+                            </a>
                         </li>
                         <li class="text-link">
-                            <a href="#iconos">
-									TÓPICOS
-								</a>
+                            <a href="#seccion6">
+                                TÓPICOS
+                            </a>
                         </li>
                     </ul>
+
                 </div>
 
             </div>
@@ -90,13 +91,13 @@
     </section>
 
     <!----------------seccion2 textos y button--------->
-    <section id="seccion2 ">
+    <section id="seccion2">
         <div id="txt-2">
 
-            <h1>Hello <span> world</span> pale blue dot .</h1>
+            <h1>Hello <span> world</span> pale blue dot <span id="bluedot">.</span></h1>
 
-            <p class="desktop-text">El portal de podcast que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días</p>
-            <p class="mobile-text">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días</p>
+            <p class="desktop-text">El portal de podcast que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.</p>
+            <p class="mobile-text">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.</p>
         </div>
         <div class="button">CONOCÉ MÁS</div>
 
@@ -105,14 +106,14 @@
 
     <!----------------seccion3 (poligono e imagenes)--------->
 
-    <section id="poligono">
+    <section id="episodios">
         <h1 class="episodios">Episodios</h1>
         <div class="podcast">
-            <div class="podcast1">
+            <div class="podcast-column">
                 <iframe src="https://open.spotify.com/embed-podcast/episode/0mcOv3vppDks32P2owV46v" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 <iframe src="https://open.spotify.com/embed-podcast/episode/34qD2ZU6YLXLMxSVV0g0fa" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
-            <div class="podcast2">
+            <div class="podcast-column">
                 <iframe src="https://open.spotify.com/embed-podcast/episode/63Oqae68J8CvyWN3c0Prhp" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 <iframe src="https://open.spotify.com/embed-podcast/episode/7zvKTpxX3A1ixV9rhIMv24" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
@@ -125,30 +126,34 @@
 
     <section id="seccion4">
         <img class="img-mobile" src="./img/phone.png " alt="imgcelular ">
-        <h1 class="txt1-4">De dónde
-            <br>venimos</h1>
+        <div class="txt-4">
+            <h1 class="txt1-4">De dónde
+                <br>venimos</h1>
 
-        <p class="txt2-4">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.
-            <br>
-            <br> Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save uf from ourselves. </p>
+            <p class="txt2-4">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.
+                <br>
+                <br> Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save uf from ourselves. </p>
+        </div>
     </section>
     <!----------------seccion5 mujeres---------------->
     <section id="seccion5">
-        <h1 class="txt1-5">Invitadas/os
-            <br>estelares</h1>
-        <div class="img-seccion5">
-            <div class="img1"> <img src="./img/grace-hopper.png " alt="Grace-Hoper "></div>
-            <div class="img2"> <img src="./img/Katie-Bouman.png " alt="Katie-bouman "></div>
-            <div class="img3"> <img src="./img/Margaret_Hamilton.png " alt="Margaret-Hamilton "></div>
-            <div class="img4"> <img src="./img/An E.R.A.Univac 1103 computer in the 1950s.png " alt="An-ERA "></div>
-            <div class="img5"> <img src="./img/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png " alt="Computer-operator "></div>
-            <div class="img6"> <img src="./img/susan-kare.png " alt="Susan-Kare "></div>
+        <h1 class="txt1-5">Invitadas/os estelares
+        </h1>
+        <div class="fotos-invitadas">
+            <img src="./img/grace-hopper.png " alt="Grace-Hoper ">
+            <img src="./img/Katie-Bouman.png " alt="Katie-bouman ">
+            <img src="./img/Margaret_Hamilton.png " alt="Margaret-Hamilton ">
+        </div>
+        <div class="fotos-invitadas">
+            <img src="./img/An E.R.A.Univac 1103 computer in the 1950s.png " alt="An-ERA ">
+            <img src="./img/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png " alt="Computer-operator ">
+            <img src="./img/susan-kare.png " alt="Susan-Kare ">
         </div>
     </section>
 
     <!--------------------- seccion 6 iconos svg---------------------->
     <section id="seccion6">
-        <h1 class="seccion6"> Algunos de <br>nuestros temas</h1>
+        <h1 class="txt1-6"> Algunos de nuestros temas</h1>
         <div class="img-seccion6">
             <div class="bloque-svg">
                 <img src="../img/icon1.svg " alt="Trabajo-remoto ">
@@ -172,10 +177,14 @@
 
 
     <section id="poligono2">
-        <h1 class="seccion7">¿Querés las últimas novedades?</h1>
-        <div class="button">
-            ESCUCHÁ LOS EPISODIOS
+
+        <div class="contenedor7">
+            <h1 class="seccion7">¿Querés las últimas novedades?</h1>
+            <div class="button2">
+                ESCUCHÁ LOS EPISODIOS
+            </div>
         </div>
+
     </section>
     <!-----------------------footer------------------------------>
     <section id="footer">
