proyecto "finalizado" sin menus

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
             <div class="bloque-svg">
                 <img src="../img/icon2.svg " alt="Repensando-programacion ">
-                <h2>Repensando la programación</h2>
+                <h2>Repensando la <br>programación</h2>
             </div>
             <div class="bloque-svg">
                 <img src="../img/icon3.svg " alt="Bases-codigo ">
@@ -169,7 +169,7 @@
             </div>
             <div class="bloque-svg">
                 <img src="../img/icon4.svg " alt="Seguridad-informatica ">
-                <h2>Seguridad informática</h2>
+                <h2>Seguridad <br>informática</h2>
             </div>
         </div>
     </section>
