CODIGO FINAL SPRINT 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Proyecto_1</title>
 </head>
 
@@ -21,13 +21,13 @@
         <img class="logo" src="./img/logo.svg" alt="logo-header" />
 
         <nav>
+            <input type="checkbox" id="navi-toggle">
             <label for="navi-toggle" id="label-burger">
                         <div class="linea" id="linea-top"></div>
                         <div class="linea" id="linea-med"></div>
                         <div class="linea" id="linea-low"></div>
                     </label>
-            <input type="checkbox" id="navi-toggle">
-            <ul>
+            <ul id="header">
                 <li><a href="#">EPISODIOS</a></li>
                 <li><a href="#">NOSOTROS</a></li>
                 <li><a href="#">ENTREVISTAS</a></li>
@@ -135,8 +135,8 @@
     </section>
     <!-----------------------footer------------------------------>
     <section id="footer">
-        <p class="footer-txt">2019 - Hello blue pale dot</p>
-        <ul>
+        <p class="footer-txt">&copy; 2019 - Hello blue pale dot</p>
+        <ul class="icon-footer">
             <li>
                 <a href="https://www.spotify.com/ar/">
                     <i class="fab fa-spotify"></i>
