--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="fotos-invitadas">
             <img src="./img/An E.R.A.Univac 1103 computer in the 1950s.png " alt="An-ERA ">
-            <img src="./img/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png " alt="Computer-operator ">
+            <img src="./img/Computer operators with an Eniac the world’s first programmable general-purpose computer.png " alt="Computer-operator ">
             <img src="./img/susan-kare.png " alt="Susan-Kare ">
         </div>
     </section>
