--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         <div class="linea" id="linea-low"></div>
                     </label>
             <ul id="header">
-                <li><a href="#">EPISODIOS</a></li>
-                <li><a href="#">NOSOTROS</a></li>
-                <li><a href="#">ENTREVISTAS</a></li>
-                <li><a href="#">TÓPICOS</a></li>
+                <li><a href="#episodios">EPISODIOS</a></li>
+                <li><a href="#seccion4">NOSOTROS</a></li>
+                <li><a href="#seccion5">ENTREVISTAS</a></li>
+                <li><a href="#seccion6">TÓPICOS</a></li>
             </ul>
         </nav>
 
@@ -92,8 +92,8 @@
             <img src="./img/Margaret_Hamilton.png " alt="Margaret-Hamilton ">
         </div>
         <div class="fotos-invitadas">
-            <img src="./img/An E.R.A.Univac 1103 computer in the 1950s.png " alt="An-ERA ">
-            <img src="./img/Computer operators with an Eniac the world’s first programmable general-purpose computer.png " alt="Computer-operator ">
+            <img src="./img/An E.R.A.Univac 1103 computer in the 1950s.png" alt="An-ERA ">
+            <img src="./img/Computer operators with an Eniac  the worlds first programmable generalpurpose computer.png" alt="Computer-operator ">
             <img src="./img/susan-kare.png " alt="Susan-Kare ">
         </div>
     </section>
